--- a/servicios/templates/pickup_servicios.html
+++ b/servicios/templates/pickup_servicios.html
@@ -26,10 +26,7 @@
     <br>
     <h3>Pickup</h3>
 
-    <div
-        class="alert alert-warning"
-        role="alert"
-    >
+    <div class="alert alert-warning" role="alert">
         <strong>Atencion!</strong> Los pedidos que tengan mas de un dia seran eliminados automáticamente
     </div>
     {% if error %}
@@ -61,7 +58,6 @@
             <tr>
                 <th>Fecha</th>
                 <th>Nombre del cliente</th>
-                <th>Ubicacion</th>
                 <th>Estatus</th>
                 <th>Acciones</th>
             </tr>
