--- a/principal/templates/delivery.html
+++ b/principal/templates/delivery.html
@@ -56,7 +56,7 @@
                                         {% endfor %}
                                         </ul>
                                     </div>
-                                    
+                                    <h5><strong>Precio  </strong>{{ item.precios }}</h5>
                                     <div class="d-grid gap-2">
                                         <!--COn este boton se accede a la pagina flotante-->
                                         
