--- a/pedidos/templates/pago_movil.html
+++ b/pedidos/templates/pago_movil.html
@@ -59,7 +59,7 @@
         <li class="list-group-item">R.I.F. {{ rif }}</li>
         <li class="list-group-item">
             <strong>MONTO A PAGAR:</strong>
-            ${{ total }}
+            ${{ total }} /  BS. {{ bolivares }}
         </li>
       </ul>
       {% endif %}
