--- a/principal/templates/pickup.html
+++ b/principal/templates/pickup.html
@@ -1,4 +1,5 @@
 {% extends 'nav.html' %}
+{% load static %}
 {% load custom_filters_principal %}
 {% block content %}
 <!DOCTYPE html>
@@ -7,6 +8,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <title>MealMate - {{ restaurante.nombre }}</title>
 </head>
 <body>
@@ -18,7 +21,20 @@
             <li>Dirección: {{ restaurante.direccion }}</li>
             <li>Teléfono: {{ restaurante.telefono }}</li>
         </ul>
-        
+        {% if latitud and longitud %}
+<div id="map" style="height: 250px; width: 250px;"></div>
+<input type="hidden" id="latitud" value="{{ latitud }}">
+<input type="hidden" id="longitud" value="{{ longitud }}">
+{% endif %}
+
+{% if latitud and longitud %} <!-- Incluir el archivo JavaScript -->
+<script>
+    var redIconUrl = '{% static "img/leaf-red.png" %}';
+    var shadowIconUrl ='{% static "img/leaf-shadow.png" %}';
+</script>
+<script src="{% static 'js/ver_mapa.js' %}"></script> <!-- Asegúrate de que la ruta sea correcta -->
+{% endif %}
+    </div>
         <div class="btn-group mb-4" role="group" aria-label="Basic outlined example">
             {% if delivery %}
                 <a href="{% url 'presentacion_one' id %}"><button type="button" class="btn btn-outline-primary">Delivery</button></a>
