--- a/user_r/templates/perfil_restaurante.html
+++ b/user_r/templates/perfil_restaurante.html
@@ -1,32 +1,44 @@
 {% extends 'nav.html' %}
-
+{% load static %}
 {% block content %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <title>{{ nombre }}</title>
 </head>
 <body>
     
     <h1>{{ nombre }}</h1>
-    <!-- Formulario para los botones de navegación -->
-    
-        <button id="tab-1" name="tab" value="datos" >Datos</button>
-        <a href="{% url 'menu' %}"><button id="tab-2" name="tab" value="menu">Menú</button></a>
-    <a href="{% url 'paypal' %}"><button id="tab-3" name="tab" value="pago">Metodos de pago</button></a>
-    <a href="{% url 'activate_d' %}"><button id="tab-4" name="tab" value="servicios">Servicios</button></a>
-   
-    {{form.as_p}}
-    <a
-        name="Modificar"
-        id=""
-        class="btn btn-primary"
-        href="{% url 'editar-perfil' %}"
-        role="button"
-         >Modificar
-    </a> 
+<!-- Formulario para los botones de navegación -->
+<button id="tab-1" name="tab" value="datos">Datos</button>
+<a href="{% url 'menu' %}"><button id="tab-2" name="tab" value="menu">Menú</button></a>
+<a href="{% url 'paypal' %}"><button id="tab-3" name="tab" value="pago">Métodos de pago</button></a>
+<a href="{% url 'activate_d' %}"><button id="tab-4" name="tab" value="servicios">Servicios</button></a>
+<br><br>
+<h3>Datos del restaurante</h3><br>
+{{ form.as_p }}
+Dirección: <br>
+<input type="date" {% if date %} value="{{ date }}"{% endif %} name="fundacion" readonly>
+
+<!-- Tamaño del mapa -->
+{% if latitud and longitud %}
+<div id="map" style="height: 300px; width: 300px;"></div>
+<input type="hidden" id="latitud" value="{{ latitud }}">
+<input type="hidden" id="longitud" value="{{ longitud }}">
+{% endif %}
+<a name="Modificar" class="btn btn-primary" href="{% url 'editar-perfil' %}" role="button">Modificar</a> 
+
+{% if latitud and longitud %} <!-- Incluir el archivo JavaScript -->
+<script>
+    var redIconUrl = '{% static "img/leaf-red.png" %}';
+    var shadowIconUrl ='{% static "img/leaf-shadow.png" %}';
+</script>
+<script src="{% static 'js/ver_mapa.js' %}"></script> <!-- Asegúrate de que la ruta sea correcta -->
+{% endif %}
 
 </body>
 </html>
