--- a/pedidos/templates/detail_pickup.html
+++ b/pedidos/templates/detail_pickup.html
@@ -60,6 +60,13 @@
     {% if pago.email %}
     <li class="list-group-item"><b>Direccion de correo electronico</b> {{ pago.email }}</li>
     {% endif %}
+
+    {% if pago.fecha %}
+    <li class="list-group-item"><b>Fecha</b> {{ pago.fecha }}</li>
+    {% endif %}
+    {% if pago.precio_dolar %}
+    <li class="list-group-item"><b>Precio de cobro del dolar</b> $1 = {{ pago.precio_dolar }} </li>
+    {% endif %}
   </ul>
 <br>
 
