--- a/pedidos/templates/pago_efectivo.html
+++ b/pedidos/templates/pago_efectivo.html
@@ -37,7 +37,7 @@
         {% endif %}
         {% if paypal %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Paypal</a>
+          <a class="nav-link" href="{% url 'paypal_pago' item %}">Paypal</a>
         </li>
         {% endif %}
       </ul>
