--- a/pedidos/templates/pago_movil.html
+++ b/pedidos/templates/pago_movil.html
@@ -34,7 +34,7 @@
         {% endif %}
         {% if paypal %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Paypak</a>
+          <a class="nav-link" href="{% url 'paypal_pago' item %}">Paypal</a>
         </li>
         {% endif %}
       </ul>
