--- a/principal/templates/delivery.html
+++ b/principal/templates/delivery.html
@@ -1,5 +1,6 @@
 {% extends 'nav.html' %}
 {% load custom_filters_principal %}
+{% load static %}
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
@@ -17,23 +18,9 @@
         <br>
         <ul>
             <li>Desde: {{ restaurante.fundacion }}</li>
-            <li>Dirección: {{ restaurante.direccion }}</li>
+           
             <li>Teléfono: {{ restaurante.telefono }}</li>
-        </ul>
-        {% if latitud and longitud %}
-<div id="map" style="height: 250px; width: 250px;"></div>
-<input type="hidden" id="latitud" value="{{ latitud }}">
-<input type="hidden" id="longitud" value="{{ longitud }}">
-{% endif %}
-
-{% if latitud and longitud %} <!-- Incluir el archivo JavaScript -->
-<script>
-    var redIconUrl = '{% static "img/leaf-red.png" %}';
-    var shadowIconUrl ='{% static "img/leaf-shadow.png" %}';
-</script>
-<script src="{% static 'js/ver_mapa.js' %}"></script> <!-- Asegúrate de que la ruta sea correcta -->
-{% endif %}
-    </div>
+            {% include 'ubicacion_restaurante.html' %}
         <div class="btn-group mb-4" role="group" aria-label="Basic outlined example">
             {% if delivery %}
                 <button disabled type="button" class="btn btn-outline-primary">Delivery</button>
@@ -45,12 +32,16 @@
                 <a href="{% url 'presentacion_two' id %}"><button type="button" class="btn btn-outline-primary">Reservaciones</button></a>
             {% endif %}
         </div>
-
+{% if not error %}
         <br>
-        {% if ubicacion %}
-        Ubicacion: {{ ubicacion }}
-        <a href="{% url 'ubicacion' id %}"><button type="button" class="btn btn-outline-primary">Cambiar ubicacion</button></a>
-        {% endif %}
+        <div class="card">
+            <div class="body">
+                <p><strong>Ubicacion de entrega del pedido</strong></p>
+                {{ ubicacion }}<br>
+                <a href="{% url 'ubicacion' id %}"><button type="button" class="btn btn-outline-primary">Cambiar ubicacion</button></a>
+            </div>
+        </div>
+{% endif %}
         <br>
         <h3>Menu</h3>
         {% if menu %}
@@ -71,7 +62,7 @@
                                         {% endfor %}
                                         </ul>
                                     </div>
-                                    <h5><strong>Precio  </strong>{{ item.precios }}</h5>
+                                    <h5><strong>Precio  </strong>$ {{ item.precios }}</h5>
                                     <div class="d-grid gap-2">
                                         <!--COn este boton se accede a la pagina flotante-->
                                         
@@ -90,10 +81,11 @@
             {% endfor %}
         {% else %}
         {% if error %}
-            <div class="alert alert-warning" role="alert">
+            <div class="alert alert-danger" role="alert">
                 <h4 class="alert-heading">Error</h4>
                 <hr />
                 <p class="mb-0">{{ error }}</p>
+                <a href="{% url 'ubicacion' %}">Cambiar ubicacion</a>
             </div>
             {% endif %}
         {% endif %}
