--- a/user_r/templates/menu.html
+++ b/user_r/templates/menu.html
@@ -13,7 +13,7 @@
       <!-- Formulario para los botones de navegación -->
   
       <a href="{% url 'perfil-restaurante' %}"><button id="tab-1" name="tab" value="datos" >Datos</button></a>
-         <a href="{% url 'menu' %}"><button id="tab-2" name="tab" value="menu">Menú</button></a>
+        <button disabled id="tab-2" name="tab" value="menu">Menú</button>
         <a href="{% url 'paypal' %}"><button id="tab-3" name="tab" value="pago">Metodos de pago</button></a>
         <<a href="{% url 'activate_d' %}"><button id="tab-4" name="tab" value="servicios">Servicios</button></a>
       
