--- a/pedidos/templates/paypal_pago.html
+++ b/pedidos/templates/paypal_pago.html
@@ -31,17 +31,17 @@
         {% endif %}
         {% if zelle %}
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Zelle</a>
+          <a class="nav-link" href="{% url 'zelle_pago' item %}">Zelle</a>
           </li>
         {% endif %}
         {% if paypal %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'paypal_pago' item %}">Paypal</a>
+          <a class="nav-link" href="#">Paypal</a>
         </li>
         {% endif %}
       </ul>
 
-    <h1>Zelle</h1>
+    <h1>Paypal</h1>
     <br><br>
     <h3>{{ nombre }}</h3>
     {% if error %}
@@ -52,12 +52,13 @@
         <strong>Error</strong> {{ error }}
     </div>
     {% endif %}
-
+    
     {% if zelle %}
-    <h3>Datos zelle del restaurante</h3>
+    <h3>Datos paypal del restaurante</h3>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><strong>Email</strong> {{ pago_restaurante.mail_z }}</li>
-        <li class="list-group-item"><strong>Telefono</strong>  {{ pago_restaurante.phone_z }}</li>
+        <li class="list-group-item"><strong>Email</strong> {{ pago_restaurante.correo }}</li>
+        <li class="list-group-item"><strong>Telefono</strong>  {{ pago_restaurante.phone_p }}</li>
+        <li class="list-group-item"><strong>Usuario de paypal</strong>  {{ pago_restaurante.user }}</li>
         <li class="list-group-item">
             <strong>MONTO A PAGAR:</strong>
             ${{ total }}
