--- a/principal/templates/ubicacion.html
+++ b/principal/templates/ubicacion.html
@@ -1,17 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <title>MealMate</title>
 </head>
 <body>
 
-    {% if pickup %}
+    {% if pickup and id is not 0 %}
         <a href="{% url 'presentacion_three' id %}"><button type="button" class="btn btn-outline-primary">x</button></a>
-    {% elif reservaciones %}
+    {% elif reservaciones and id is not 0%}
         <a href="{% url 'presentacion_two' id %}"><button type="button" class="btn btn-outline-primary">x</button></a>
     {% else %}
         <a href="{% url 'home' %}">x</a>    
@@ -19,49 +21,39 @@
 
     <br>
     
-    <h2>Marca tu ubicacion</h2>
+    <h2>Marca tu ubicacion en el mapa</h2>
+{% if error %}
+    <div
+        class="alert alert-danger"
+        role="alert"
+    >
+        <h4 class="alert-heading">Error</h4>
+        <p>{{ error }}</p>
+        <hr />
+    </div>
+    
+{% endif %}
 
     <!--Tamaño del mapa-->
-    <div id="map" style="height: 600px; width: 600px;"></div>
-
+    
+    <form method="POST"> 
+        {% csrf_token %} 
+      
+        <!-- Tamaño del mapa -->
+        <div id="map" style="height: 600px; width: 600px;"></div>
+        
+        <!-- Campos ocultos para latitud y longitud -->
+        <input type="hidden" id="lat" name="latitude" {% if latitud %} value="{{ latitud }}"  {% endif %} >
+        <input type="hidden" id="long" name="longitude" {% if longitud %} value="{{ longitud }}"  {% endif %} >
+        
+        <button type="submit">Guardar</button> 
+    </form>
+    
+    <!-- Incluir el archivo JavaScript -->
     <script>
-        var map; // Definir la variable map aquí
-        var defaultCoordinates = [10.492886, -66.780632]; // Coordenadas por defecto
-    
-        navigator.geolocation.getCurrentPosition((position) => {
-            // Inicializar el mapa con la posición actual
-            map = L.map('map').setView([position.coords.latitude, position.coords.longitude], 17);
-            
-            // Añadir la capa de mosaico después de inicializar el mapa
-            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                maxZoom: 19,
-                attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-            }).addTo(map);
-    
-            // Añadir el evento de clic en el mapa
-            map.on('click', onMapClick);
-        }, (error) => {
-            console.error("Error al obtener la ubicación: ", error);
-            alert("No se pudo obtener la ubicación. Usando coordenadas por defecto.");
-    
-            // Inicializar el mapa con las coordenadas por defecto
-            map = L.map('map').setView(defaultCoordinates, 18);
-    
-            // Añadir la capa de mosaico después de inicializar el mapa
-            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                maxZoom: 19,
-                attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-            }).addTo(map);
-    
-            // Añadir el evento de clic en el mapa
-            map.on('click', onMapClick);
-        });
-    
-        function onMapClick(e) {
-            alert("Hiciste clic en el mapa en " + e.latlng);
-        }
+        var redIconUrl = '{% static "img/leaf-red.png" %}';
+        var shadowIconUrl ='{% static "img/leaf-shadow.png" %}';
     </script>
-
-
+    <script src="{% static 'js/mapa2.js' %}"></script> <!-- Asegúrate de que la ruta sea correcta -->
 </body>
 </html>
