--- a/user_r/templates/crear_comida.html
+++ b/user_r/templates/crear_comida.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <a href="{% url 'menu' %}">
+      <button type="button" class="btn-close" aria-label="Close"></button>  
+    </a>
+    
+
     <h1>Crear Comida</h1>
     <h1>Menu's {{nombre}}</h3>
         {% if error %}
