--- a/user_r/templates/user2/registro_restaurante.html
+++ b/user_r/templates/user2/registro_restaurante.html
@@ -5,30 +5,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>MealMate</title>
   
-    <script>
-        function redirigir(event, tipo) {
-            event.preventDefault();
-            if (tipo === 'cliente') {
-                window.location.href = "{% url 'registro_cliente' %}";
-            }
-        }
-    </script>
 </head>
 <body>
     
-    <h1>Registro</h1>
-    <form method="post">
-        <button id="tab-1" checked name="tab" value="cliente" onclick="redirigir(event, 'cliente')">Cliente</button>
-        <button id="tab-2" name="tab" value="restaurante" onclick="redirigir(event, 'restaurante')">Restaurante</button>
-    </form>
-
+    <h1>Registro  Restaurante</h1>
+        
+        <a href="{% url 'registro_cliente' %}"><button>Cliente</button></a>
+    <button disabled>Restaurante</button>
+    
+    {% if error %}
+    <div
+        class="alert alert-danger"
+        role="alert"
+    >
+        <strong>Error</strong> {{ error }}
+    </div>
+    
+    {% endif %}
     <div id="restaurante-form" class="form-container">
         <form method="POST">
             {{ form }}
             {%csrf_token%}
-            {{ error }}
             <br><button>Registrarse</button>
         </form>
     </div>
